--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "backend-issafrique",
+    "name": "backendEcom",
     "authors": [
         {
-            "name": "Assane KA",
-            "email": "kasanesn@hotmail.com"
+            "name": "Adama Goudiaby",
+            "email": "goudiabyadama0911@gmail.com.com"
         }
     ],
     
