--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,18 @@
 {
-    "name": "backendEcom",
+    "name": "samcovBackend",
     "authors": [
         {
             "name": "Adama Goudiaby",
             "email": "goudiabyadama0911@gmail.com.com"
         }
     ],
-    
+
     "autoload":{
         "psr-4":{
             "App\\":"app/"
         }
     },
-    
+
     "require": {
         "slim/slim": "^3.7"
     }
